--- a/index.html
+++ b/index.html
@@ -11,34 +11,178 @@ License: https://nexnovatechnologies.com/license
   <meta charset="utf-8">
 
 
-  <title>Best App Development Company | Nexnova Technologies Pvt Ltd (Naxnova, Nexalnova)</title>
+  <title>Best App Development Company in Kerala | Nexnova Technologies - Flutter, Web & Mobile Apps</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="robots" content="index, follow">
-  <meta name="keywords"
-    content="Nexnova Technologies, Best App Development Company, Custom Software Solutions, Mobile App Development, Flutter App Development">
-  <meta name="keywords"
-    content="Nexnova Technologies, Naxnova Technologies, Nexalnova Technologies, web development, app development, digital marketing, Kerala">
-  <meta name="description"
-    content="Nexnova Technologies - The best app development company in Kerala, offering custom software and mobile app solutions for businesses of all sizes.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 
+  <!-- Primary Meta Tags -->
+  <meta name="title"
+    content="Best App Development Company in Kerala | Nexnova Technologies - Flutter, Web & Mobile Apps">
+  <meta name="keywords"
+    content="app development company kerala, mobile app development kerala, flutter app development, web development company kerala, software development kerala, digital marketing kerala, ERP solutions kerala, custom software development, IT company kerala, tech solutions kerala, app developers kerala, website development kerala, software company kerala, IT services kerala, technology solutions kerala">
+  <meta name="description"
+    content="Nexnova Technologies - Leading app development company in Kerala. Specializing in Flutter mobile apps, web development, custom software solutions, ERP implementation, and digital marketing. Get innovative tech solutions for your business growth.">
   <meta name="author" content="Nexnova Technologies Pvt Ltd">
+  <meta name="language" content="English">
+  <meta name="revisit-after" content="7 days">
+  <meta name="rating" content="general">
+
+  <!-- Canonical URL -->
   <link rel="canonical" href="https://nexnovatechnologies.in/">
 
-
   <!-- Favicons -->
-  <link rel="icon" href="img/favicon-16x16.png" sizes="32x32">
-  <link rel="icon" href="img/favicon-32x32.png" sizes="16x16">
+  <link rel="icon" href="img/favicon-16x16.png" sizes="16x16" type="image/png">
+  <link rel="icon" href="img/favicon-32x32.png" sizes="32x32" type="image/png">
+  <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+  <link rel="manifest" href="img/site.webmanifest">
 
-  <!-- <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon"> -->
-
-  <meta property="og:title" content="Nexnova Technologies - Best App Development Company">
-  <meta property="og:description" content="Custom software and mobile app solutions for businesses of all sizes.">
-  <meta property="og:image" content="https://nexnovatechnologies.in/img/og-image.jpg">
-  <meta property="og:url" content="https://nexnovatechnologies.in/">
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
+  <meta property="og:url" content="https://nexnovatechnologies.in/">
+  <meta property="og:title" content="Best App Development Company in Kerala | Nexnova Technologies">
+  <meta property="og:description"
+    content="Leading app development company in Kerala. Specializing in Flutter mobile apps, web development, custom software solutions, ERP implementation, and digital marketing.">
+  <meta property="og:image" content="https://nexnovatechnologies.in/img/og-image.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="Nexnova Technologies">
+  <meta property="og:locale" content="en_US">
 
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://nexnovatechnologies.in/">
+  <meta property="twitter:title" content="Best App Development Company in Kerala | Nexnova Technologies">
+  <meta property="twitter:description"
+    content="Leading app development company in Kerala. Specializing in Flutter mobile apps, web development, custom software solutions, ERP implementation, and digital marketing.">
+  <meta property="twitter:image" content="https://nexnovatechnologies.in/img/og-image.jpg">
+
+  <!-- Additional SEO Meta Tags -->
+  <meta name="geo.region" content="IN-KL">
+  <meta name="geo.placename" content="Kerala, India">
+  <meta name="geo.position" content="10.8505;76.2711">
+  <meta name="ICBM" content="10.8505, 76.2711">
+
+  <!-- Business Schema Markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Nexnova Technologies Pvt Ltd",
+    "url": "https://nexnovatechnologies.in/",
+    "logo": "https://nexnovatechnologies.in/img/logo_1.png",
+    "description": "Leading app development company in Kerala specializing in Flutter mobile apps, web development, custom software solutions, ERP implementation, and digital marketing.",
+    "foundingDate": "2020",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Thirurkad School Padi, Orphanage Building, 1st Floor",
+      "addressLocality": "Perinthalmanna",
+      "addressRegion": "Kerala",
+      "addressCountry": "IN",
+      "postalCode": "679322"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+91-7306121517",
+      "contactType": "customer service",
+      "areaServed": "IN",
+      "availableLanguage": "English, Malayalam"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/nexnova-technologies",
+      "https://www.instagram.com/nexnova.technologies",
+      "https://github.com/adulusman",
+      "https://nexnovatechnologies.setmore.com/nexnova",
+      "https://www.facebook.com/nexnova.technologies",
+      "https://www.adulusman.web.app",
+      "https://www.threads.com/@nexnova.technologies"
+    ],
+    "serviceArea": {
+      "@type": "GeoCircle",
+      "geoMidpoint": {
+        "@type": "GeoCoordinates",
+        "latitude": 10.8505,
+        "longitude": 76.2711
+      },
+      "geoRadius": "500000"
+    },
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "IT Services",
+      "itemListElement": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Mobile App Development",
+            "description": "Flutter mobile app development for iOS and Android"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Web Development",
+            "description": "Custom website development and web applications"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Custom Software Development",
+            "description": "Tailored software solutions for businesses"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "ERP Solutions",
+            "description": "ERPNext implementation and customization"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Digital Marketing",
+            "description": "SEO, social media marketing, and digital presence optimization"
+          }
+        }
+      ]
+    }
+  }
+  </script>
+
+  <!-- Local Business Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Nexnova Technologies Pvt Ltd",
+    "image": "https://nexnovatechnologies.in/img/logo_1.png",
+    "description": "Leading app development company in Kerala",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Thirurkad School Padi, Orphanage Building, 1st Floor",
+      "addressLocality": "Perinthalmanna",
+      "addressRegion": "Kerala",
+      "addressCountry": "IN"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 10.8505,
+      "longitude": 76.2711
+    },
+    "url": "https://nexnovatechnologies.in/",
+    "telephone": "+91-7306121517",
+    "openingHours": "Mo-Fr 09:00-18:00",
+    "priceRange": "₹₹",
+    "currenciesAccepted": "INR",
+    "paymentAccepted": "Cash, Credit Card, Bank Transfer"
+  }
+  </script>
 
   <!-- Google Fonts -->
   <link
@@ -58,33 +202,6 @@ License: https://nexnovatechnologies.com/license
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
-
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
-    "name": "Nexnova Technologies",
-    "url": "https://nexnovatechnologies.in/",
-    "description": "The best app development company offering innovative software solutions.",
-    "applicationCategory": "BusinessApplication",
-    "publisher": {
-      "@type": "Organization",
-      "name": "Nexnova Technologies Pvt Ltd",
-      "url": "https://nexnovatechnologies.in/"
-    }
-     "sameAs": [
-      "https://www.linkedin.com/company/nexnova-technologies",
-      "https://www.instagram.com/nexnova.technologies",
-      "https://github.com/adulusman",
-      "https://nexnovatechnologies.setmore.com/nexnova",
-      "https://www.facebook.com/nexnova.technologies",
-      "https://www.adulusman.web.app",
-      "https://www.threads.com/@nexnova.technologies"
-
-      
-    ]
-  }
-  </script>
 
 </head>
 
